--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,8 @@
-# my configure for tmux 1.3, from http://dev.gentoo.org/~wired/conf/tmux.conf
-# Another good example is https://github.com/rhinoceraptor/dotfiles/blob/master/tmux/.tmux.conf
+# Steven Ding's configure for tmux 3.2, from
+# http://dev.gentoo.org/~wired/conf/tmux.conf
+#
+# Another good example is
+# https://github.com/rhinoceraptor/dotfiles/blob/master/tmux/.tmux.conf
 # etc.
 
 #* Behaviour
