Fix xterm UP/DOWN/LEFT/RIGHT key issue

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,5 @@
-# Steven Ding's configure for tmux 3.2, from
-# http://dev.gentoo.org/~wired/conf/tmux.conf
-#
-# Another good example is
-# https://github.com/rhinoceraptor/dotfiles/blob/master/tmux/.tmux.conf
+# my configure for tmux 1.3, from http://dev.gentoo.org/~wired/conf/tmux.conf
+# Another good example is https://github.com/rhinoceraptor/dotfiles/blob/master/tmux/.tmux.conf
 # etc.
 
 #* Behaviour
@@ -83,4 +80,6 @@ set-window-option -g xterm-keys on
 set -g default-terminal "screen.xterm-new"
 
 # Allow xterm titles in the terminal window, terminal scrolling with scrollbar, and setting overrides of C-Up, C-Down, C-Left, C-Right
-set -g terminal-overrides "xterm*:XT:smcup@:rmcup@:kUP5=\eOA:kDN5=\eOB:kLFT5=\eOD:kRIT5=\eOC"
+#set -g terminal-overrides "xterm*:XT:smcup@:rmcup@:kUP5=\eOA:kDN5=\eOB:kLFT5=\eOD:kRIT5=\eOC"
+# Fix xterm UP/DOWN/LEFT/RIGHT key issue
+set -g terminal-overrides "xterm*:XT:smcup@:rmcup@"
