--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,6 @@ bind-key 'C-\' send-prefix
 bind-key | split-window -h      # default is %
 bind-key - split-window -v      # default is "
 
-bind-key -T copy-mode   ö  send-keys -X page-up
 
 # Alt + # window switching
 # Most linux terminal emulators need to be told not to steal alt
@@ -33,11 +32,17 @@ bind-key -n M-7 select-window -t 7
 bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 bind-key -n M-` last-window
+bind-key -n M-LEFT select-window -t:-
+bind-key -n M-RIGHT select-window -t:+
+#bind-key -n M-UP select-window -t:-
+#bind-key -n M-RIGHT select-window -t:+
 
 # Automatically renumber windows
 bind R move-window -r
 
 #* color theme
+# For tmux 3
+bind-key -T copy-mode   ö  send-keys -X page-up
 set-option -g status-bg darkgray
 set-option -g window-status-style fg=black
 set-option -g window-status-current-style fg=blue,bold,bg=#00ee00
@@ -47,6 +52,38 @@ set-option -g pane-border-style bg=yellow,fg=blue
 #set-option -g pane-border-fg blue
 set-option -g pane-active-border-style bg=green,fg=red
 #set-option -g pane-active-border-fg red
+# For tmux 1.x
+#set-option -g status-bg colour251
+#set-option -g window-status-bg colour249
+#set-option -g window-status-fg black
+#set-option -g window-status-current-bg colour48
+#set-option -g window-status-last-bg colour40
+#set-option -g window-status-activity-bg colour160
+#set-option -g window-status-content-bg colour160
+#set-option -g pane-active-border-bg colour111
+
+#if-shell "[[ `tmux -V | cut -d' ' -f2` == \"3*\" ]]" "\
+#tmux set-option -g status-bg darkgray;\
+#set-option -g window-status-style fg=black;\
+#set-option -g window-status-current-style fg=blue,bold,bg=colour48;\
+#set-option -g window-status-last-style bg=#00bb00;\
+#set-option -g window-status-activity-style bg=#550000,fg=#ffffff;\
+#set-option -g pane-border-style bg=yellow,fg=blue;\
+#set-option -g pane-active-border-style bg=green,fg=red;\
+#"
+##set-option -g pane-border-fg blue\
+##set-option -g pane-active-border-fg red
+#if-shell "[[ `tmux -V | cut -d' ' -f2` -lt 2.0 ]]" \
+#'\
+#set-option -g status-bg colour251;\
+#set-option -g window-status-bg colour249;\
+#set-option -g window-status-fg black;\
+#set-option -g window-status-current-bg colour48;\
+#set-option -g window-status-last-bg colour40;\
+#set-option -g window-status-activity-bg colour160;\
+#set-option -g window-status-content-bg colour160;\
+#set-option -g pane-active-border-bg colour111;\
+#'
 
 set-option -g terminal-features title
 
@@ -60,8 +97,8 @@ set-option -g terminal-features title
 
 #* Status bar format
 set-option -g status on
-set-option -g status-justify centre
-set-option -g status-left-length 30
+set-option -g status-justify left
+#set-option -g status-left-length 30
 #set-option -g status-left "#[bg=cyan,fg=blue][t:#S]"
 #set-option -g status-right "#T"
 set-option -g base-index 1      # window index starts from 1 instead of 0
@@ -77,7 +114,7 @@ set-window-option -g xterm-keys on
 # TERM
 #if-shell '/usr/bin/infocmp xterm-256color' 'set-option -g default-terminal "xterm-256color"'
 #set -g default-terminal "screen-256color-bce"
-set -g default-terminal "screen.xterm-new"
+set -g default-terminal "screen.xterm-256color"
 
 # Allow xterm titles in the terminal window, terminal scrolling with scrollbar, and setting overrides of C-Up, C-Down, C-Left, C-Right
 #set -g terminal-overrides "xterm*:XT:smcup@:rmcup@:kUP5=\eOA:kDN5=\eOB:kLFT5=\eOD:kRIT5=\eOC"
